# LibCDS

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: arrays.md  cmake.md  queue.md
examples/: CMakeLists.txt  array_example.c
include/: CMakeLists.txt  libcds_array.h
src/: CMakeLists.txt  array.c  array.h  libcds_array.c  queue.h  queue_arr1p.c  queue_arr1p.h  queue_arr2p.c  queue_circular.c  types.c  types.h
tests/: logger.h  test_arrays.c  test_queues.c  test_queues_arr1p.c  test_queues_arr2p.c  test_queues_circular.c
tests/arrays/: CMakeLists.txt  test_arrays.c
